feat: updates HTML on several pages

--- a/app/views/pokemons/edit.html.erb
+++ b/app/views/pokemons/edit.html.erb
@@ -6,3 +6,5 @@
   <textarea name='pokemon[description]'><%= @pokemon.description %></textarea><br/>
   <input type='submit'/>
 </form>
+
+<p><a href="<%= welcome_path(@pokemon) %>">Return to Main Page</a></p>
