--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,25 @@
 <h1>Welcome to the Pokedex</h1>
 
-<ul>
-  <li><a href="/pokemons">Pokemon Index</a></li>
-  <li><a href="/pokemons/new">New Pokemon</a></li>
-</ul>
+<div class="center-on-page">
+
+  <div class="pokeball">
+    <div class="pokeball__button"></div>
+  </div>
+
+</div>
+
+<link href="https://fonts.googleapis.com/css2?family=Wendy+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet">
+
+<div>
+<img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
+</div>
+<style>
+  #start {
+    text-transform: uppercase;
+  }
+</style>
+
+<button onClick="window.location.href='/pokemons'" id="start">OPEN POK&eacute;DEX</button>
+<button onClick="window.location.href='/pokemons/new'" id="start">ADD NEW POK&eacute;MON</button>
+
