--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,191 @@
  *= require_tree .
  *= require_self
  */
+
+.edit-button, .delete-button {
+  display: inline-block;
+  padding: 10px;
+  background-color: #f00;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  text-decoration: none;
+  cursor: pointer;
+  width: 100px;
+  height: 100px;
+  position: relative;
+  overflow: hidden;
+}
+
+.edit-button:before, .delete-button:before {
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  left: 10px;
+  top: 10px;
+}
+
+.edit-button:after, .delete-button:after {
+  content: '';
+  position: absolute;
+  background-color: #000;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  left: 40px;
+  top: 40px;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
+  background: #ecf0f1;
+}
+.center-on-page {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+/* Poké Styles */
+.pokeball {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background: #fff;
+  border: 10px solid #000;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: inset -10px 10px 0 10px #ccc;
+  animation: fall .25s ease-in-out,
+             shake 1.25s cubic-bezier(.36,.07,.19,.97) 3;
+}
+.pokeball::before,
+.pokeball::after {
+  content:"";
+  position: absolute;
+}
+.pokeball::before {
+  background: red;
+  width: 100%;
+  height: 50%;
+}
+.pokeball::after {
+  top: calc(50% - 10px);
+  width: 100%;
+  height: 20px;
+  background: #000;
+}
+.pokeball__button {
+  position: absolute;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  width: 60px;
+  height: 60px;
+  background: #7f8c8d;
+  border: 10px solid #fff;
+  border-radius: 50%;
+  z-index: 10;
+  box-shadow: 0 0 0 10px black;
+  animation: blink .5s alternate 7;
+}
+/* Animation */
+@keyframes blink {
+  from { background: #eee;}
+  to { background: #e74c3c; }
+}
+@keyframes shake {
+  0 { transform: translate(0, 0) rotate(0); }
+  20% { transform: translate(-10px, 0) rotate(-20deg); }
+  30% { transform: translate(10px, 0) rotate(20deg); }
+  50% { transform: translate(-10px, 0) rotate(-10deg); }
+  60% { transform: translate(10px, 0) rotate(10deg); }
+  100% { transform: translate(0, 0) rotate(0); }
+}
+@keyframes fall {
+  0% { top: -200px }
+  60% { top: 0 }
+  80% { top: -20px }
+  100% { top: 0 }
+}
+
+body {
+  background-color: white;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  color: #003060;
+  font-size: 10px;
+}
+#start {
+  margin-top: 20px;
+  line-height: 60px;
+  font-weight: bold;
+  font-size: large;
+  color: black;
+  padding: 0 40px;
+  background: lightblue;
+  border: 3px solid #003060;
+  border-radius: 40px;
+  box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+}
+#start:hover {
+  background: #003060;
+  color: white;
+  position: relative;
+  top: 10px;
+  box-shadow: none;
+}
+#logo {
+  height: 150px;
+}
+span {
+  font-family: 'Wendy One', sans-serif;
+  font-size: 50px;
+  color: #ffcc00;
+  text-shadow:
+       3px 3px 0 navy,
+     -1px -1px 0 navy,
+      1px -1px 0 navy,
+      -1px 1px 0 navy,
+       1px 1px 0 navy;
+}
+.attackbuttons {
+  margin: 20px 5px 0 5px;
+  line-height: 40px;
+  font-size: 20px;
+  color: black;
+  padding: 0 20px;
+  background: lightblue;
+  border: 3px solid #003060;
+  border-radius: 20px;
+  box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+}
+.attackbuttons:hover {
+  background: #003060;
+  color: white;
+  position: relative;
+  top: 10px;
+  box-shadow: none;
+}
+
+    /* CSS to center the table horizontally */
+    .container {
+      display: flex;
+      justify-content: center;
+    }
+
+        /* CSS to adjust the width of select elements */
+    .field-select {
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+        /* CSS to align labels to the left */
+    td.label-cell {
+      text-align: left;
+    }
