--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,10 +1,17 @@
-<a href="/pokemons">Pokemon Index</a>
-
-<h1><%= @pokemon.title %></h1>
-
-<p><%= @pokemon.description %></p>
-
-<%= button_to "Edit", "/edit"(@pokemon), method: :get, class: "edit-button" %>
-
-
-<p><a href="<%= welcome_path(@pokemon) %>">Return to Main Page</a></p>
+<html>
+  <head>
+  </head>
+  <body>
+    <a href="/pokemons">Pokemon Index</a>
+    <h1><%= @pokemon.name %></h1>
+    <p>Type: <%= @pokemon.pokemon_type %></p>
+    <p>Trainer: <%= @pokemon.trainer %></p>
+    <p>Height: <%= @pokemon.height %></p>
+    <p>Weight: <%= @pokemon.weight %></p>
+    <p>Can Evolve: <%= @pokemon.can_evolve %></p>
+    <%= button_to "Edit", edit_pokemon_path(@pokemon), method: :get %>
+    <div style="text-align: center;">
+      <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
+    </div>
+  </body>
+</html>
