--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,3 +16,6 @@
 </style>
 <button onClick="window.location.href='/pokemons'" id="big_button">OPEN POK&eacute;DEX</button>
 <button onClick="window.location.href='/pokemons/new'" id="big_button">ADD NEW POK&eacute;MON</button>
+<br>
+<button onClick="window.location.href='/trainers'" id="big_button">OPEN TRAINER-DEX</button>
+<button onClick="window.location.href='/trainers/new'" id="big_button">ADD NEW TRAINER</button>
