--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>All Pokemons</title>
+    <title>Poke-Dex</title>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <style>
       .mouseover-button {
@@ -28,7 +28,9 @@
     </style>
   </head>
   <body>
-    <h1>All pokemons</h1>
+    <div>
+      <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
+    </div>
     <div class="pokemon-entries-container">
       <table>
         <% @pokemons.each do |pokemon| %>
@@ -44,8 +46,12 @@
                   <td><%= pokemon.pokemon_type %></td>
                 </tr>
                 <tr>
-                  <td class="label-cell">Trainer:</td>
-                  <td><%= pokemon.trainer %></td>
+                  <td class="label-cell">Trainer Name:</td>
+                  <td><%= pokemon.trainer.name %></td>
+                </tr>
+                <tr>
+                  <td class="label-cell">Trainer ID:</td>
+                  <td><%= pokemon.trainer.id %></td>
                 </tr>
                 <tr>
                   <td class="label-cell">Height (inches):</td>
@@ -61,15 +67,15 @@
                 </tr>
                 <tr>
                   <td colspan="2" style="text-align: center;">
-                    <div class="button-group">
-                      <a href="/pokemons/<%= pokemon.id %>/edit" class="small_button mouseover-button">Edit</a>
-                      <form action="/pokemons/<%= pokemon.id %>" method="POST">
-                        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <input type="hidden" name="action" value="EDIT">
-                        <input type="submit" value="Delete" class="small_button mouseover-button delete-button"/>
-                      </form>
-                    </div>
+              <div class="button-group">
+                <a href="/pokemons/<%= pokemon.id %>/edit" class="small_button mouseover-button">Edit</a>
+                <form action="/pokemons/<%= pokemon.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this Pokémon?');">
+                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+                <input type="hidden" name="_method" value="DELETE">
+                <input type="hidden" name="action" value="EDIT">
+                <input type="submit" value="Delete" class="small_button mouseover-button delete-button"/>
+                </form>
+              </div>
                   </td>
                 </tr>
               </table>
