--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -39,7 +39,7 @@
               <table>
                 <tr>
                   <td class="label-cell">Name:</td>
-                  <td><%= pokemon.name %></td>
+                    <td><b><a href="/pokemons/<%= pokemon.id %>"><%= pokemon.name %></a></b></td>
                 </tr>
                 <tr>
                   <td class="label-cell">Type:</td>
