--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -41,7 +41,7 @@
           <table>
             <tr>
               <td class="label-cell">Name:</td>
-              <td><%= trainer.name %></td>
+              <td><b><a href="/trainers/<%= trainer.id %>"><%= trainer.name %></a></b></td>
             </tr>
             <tr>
               <td class="label-cell">ID:</td>
