feat: adds created_at and updated_at fields to HTML

--- a/app/views/pokemons/edit.html.erb
+++ b/app/views/pokemons/edit.html.erb
@@ -47,6 +47,14 @@
               </div>
             </td>
           </tr>
+          <tr>
+            <td class="label-cell">Created At:</td>
+            <td><%= @pokemon.created_at %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">Created At:</td>
+            <td><%= @pokemon.updated_at %></td>
+          </tr>
         </table>
       <% end %>
     </div>
