--- a/app/views/trainers/edit.html.erb
+++ b/app/views/trainers/edit.html.erb
@@ -37,6 +37,14 @@
               </div>
             </td>
           </tr>
+          <tr>
+            <td class="label-cell">Created At:</td>
+            <td><%= @trainer.created_at %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">Updated At:</td>
+            <td><%= @trainer.updated_at %></td>
+          </tr>
         </table>
       <% end %>
     </div>
