--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -66,6 +66,14 @@
                   <td><%= pokemon.can_evolve %></td>
                 </tr>
                 <tr>
+                  <td class="label-cell">Created At:</td>
+                  <td><%= pokemon.created_at %></td>
+                </tr>
+                <tr>
+                  <td class="label-cell">Updated At:</td>
+                  <td><%= pokemon.updated_at %></td>
+                </tr>
+                <tr>
                   <td colspan="2" style="text-align: center;">
               <div class="button-group">
                 <a href="/pokemons/<%= pokemon.id %>/edit" class="small_button mouseover-button">Edit</a>
