--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -63,7 +63,15 @@ text-decoration: none;
             <td class="label-cell">Can Evolve:</td>
             <td><%= @pokemon.can_evolve %></td>
           </tr>
-                          <tr>
+          <tr>
+            <td class="label-cell">Created At:</td>
+            <td><%= @pokemon.created_at %></td>
+          </tr>
+          <tr>
+            <td class="label-cell">Updated At:</td>
+            <td><%= @pokemon.updated_at %></td>
+          </tr>
+              <tr>
                   <td colspan="2" style="text-align: center;">
               <div class="button-group">
                 <a href="/pokemons/<%= @pokemon.id %>/edit" class="small_button mouseover-button">Edit</a>
