--- a/app/views/trainers/edit.html.erb
+++ b/app/views/trainers/edit.html.erb
@@ -37,6 +37,14 @@
               </div>
             </td>
           </tr>
+                      <tr>
+              <td class="label-cell">Assigned Pokémon:</td>
+              <td>
+                <% @trainer.pokemons.each do |pokemon| %>
+                  <%= pokemon.name %><br>
+                <% end %>
+              </td>
+            </tr>
           <tr>
             <td class="label-cell">Created At:</td>
             <td><%= @trainer.created_at %></td>
