fix: fixed HTML to show all attributes on all pages

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -42,6 +42,10 @@
                     <td><b><a href="/pokemons/<%= pokemon.id %>"><%= pokemon.name %></a></b></td>
                 </tr>
                 <tr>
+                  <td class="label-cell">Pokemon ID:</td>
+                  <td><%= pokemon.id %></td>
+                </tr>
+                <tr>
                   <td class="label-cell">Type:</td>
                   <td><%= pokemon.pokemon_type %></td>
                 </tr>
