--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -52,6 +52,10 @@ text-decoration: none;
             <td><%= @pokemon.trainer.name %></td>
           </tr>
           <tr>
+            <td class="label-cell">Trainer ID:</td>
+            <td><%= @pokemon.trainer.id %></td>
+          </tr>
+          <tr>
             <td class="label-cell">Height:</td>
             <td><%= @pokemon.height %></td>
           </tr>
