--- a/app/views/pokemons/assigned_pokemons.html.erb
+++ b/app/views/pokemons/assigned_pokemons.html.erb
@@ -1,8 +1,8 @@
 <html>
-  <head>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <style>
-      .mouseover-button {
+<head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <style>
+    .mouseover-button {
       margin-top: 10px;
       line-height: 30px;
       font-weight: bold;
@@ -14,44 +14,78 @@
       border-radius: 40px;
       box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
       text-decoration: none;
-      }
-      .mouseover-button:hover {
+    }
+    .mouseover-button:hover {
       background: #003060;
       color: white;
       position: relative;
       top: 3px;
       box-shadow: none;
       text-decoration: none;
-      }
-    </style>
-<title>Assigned Pokemon for <%= @trainer.name %></title>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  </head>
-  <body>
-    <div>
-      <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
-    </div>
-    <div class="pokemon-entries-container">
-      <table>
-          <tr>
-            <td class="label-cell">Name:</td>
-            <td><%= @trainer.name %></td>
-          </tr>
-          <tr>
-            <td class="label-cell">Assigned Pokémon:</td>
-            <td>
-              <% @trainer.pokemons.each do |pokemon| %>
-                <%= pokemon.name %><br>
-                <% end %>
-              </td>
-            </tr>
-              </div>
-            </table>
-            <div style="text-align: center;">
-              <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
-            </div>
-            <div style="text-align: center;">
-              <button onClick="window.location.href='/trainers'" id="return_button">Return to Trainer Index</button>
-            </div>
-          </body>
-        </html>
+    }
+    .pokemon-table {
+      margin-bottom: 40px; /* Adjust the margin-bottom value as desired */
+    }
+  </style>
+  <title>Assigned Pokemon for <%= @trainer.name %></title>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+</head>
+<body>
+  <div>
+    <img id="logo" src="https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
+  </div>
+  <h1>Assigned Pokémon for <%= @trainer.name %></h1>
+  <div class="pokemon-entries-container">
+    <% @trainer.pokemons.each do |pokemon| %>
+      <table class="pokemon-table">
+        <tr>
+          <td class="label-cell">Name:</td>
+          <td><b><%= pokemon.name %></b></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Pokemon ID:</td>
+          <td><%= pokemon.id %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Type:</td>
+          <td><%= pokemon.pokemon_type %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Trainer Name:</td>
+          <td><%= pokemon.trainer.name %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Trainer ID:</td>
+          <td><%= pokemon.trainer.id %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Height:</td>
+          <td><%= pokemon.height %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Weight:</td>
+          <td><%= pokemon.weight %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Can Evolve:</td>
+          <td><%= pokemon.can_evolve %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Created At:</td>
+          <td><%= pokemon.created_at %></td>
+        </tr>
+        <tr>
+          <td class="label-cell">Updated At:</td>
+          <td><%= pokemon.updated_at %></td>
+        </tr>
+      </table>
+    <% end %>
+  </div>
+  <div style="text-align: center;">
+    <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
+  </div>
+  <div style="text-align: center;">
+    <button onClick="window.location.href='/trainers'" id="return_button">Return to Trainer Index</button>
+  </div>
+</body>
+</html>
