--- a/app/views/pokemons/assigned_pokemons.html.erb
+++ b/app/views/pokemons/assigned_pokemons.html.erb
@@ -35,6 +35,7 @@
     <img id="logo" src="https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
   </div>
   <h1>Assigned Pokémon for <%= @trainer.name %></h1>
+  <h3>Total Assigned Pokémon: <%= @trainer.pokemons.count %></h3>
   <div class="pokemon-entries-container">
     <% @trainer.pokemons.each do |pokemon| %>
       <table class="pokemon-table">
