--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -29,7 +29,8 @@
   </head>
   <body>
     <div>
-      <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
+      <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png"><br>
+    <button onClick="window.location.href='/pokemons/new'" id="big_button">ADD NEW POK&eacute;MON</button><br><br><br>
     </div>
     <div class="pokemon-entries-container">
       <table>
