refactor: adds return to main page

--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -65,5 +65,10 @@
   </table>
   <button type="submit" id="small_button">Add Pokémon</button>
 </form>
+
+<div style="text-align: center;">
+  <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
+</div>
+
 </body>
 </html>
