refactor: adds add new trainer button

--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -33,6 +33,8 @@
   <img id="logo"
        src="https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
 </div>
+<button onClick="window.location.href='/trainers/new'" id="big_button">ADD NEW TRAINER</button><br><br><br>
+
 <div class="trainer-entries-container">
   <table>
     <% @trainers.each do |trainer| %>
