refactor: moves method to model

--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -31,6 +31,12 @@
     <div>
       <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
     </div>
+<tr><h2>
+  <td class="label-cell">Assigned Pokémon:</td>
+  <td><%= @trainer.assigned_pokemon_count %></td></h2>
+</tr>
+
+
     <div class="pokemon-entries-container">
       <table>
         <table>
