--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -72,11 +72,11 @@
                 </tr>
                 <tr>
                   <td class="label-cell">Created At:</td>
-                  <td><%= pokemon.created_at %></td>
+                  <td><%= pokemon.created_at.strftime('%Y-%m-%d %H:%M:%S') %></td>
                 </tr>
                 <tr>
                   <td class="label-cell">Updated At:</td>
-                  <td><%= pokemon.updated_at %></td>
+                  <td><%= pokemon.updated_at.strftime('%Y-%m-%d %H:%M:%S') %></td>
                 </tr>
                 <tr>
                   <td colspan="2" style="text-align: center;">
