--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -397,6 +397,26 @@ tr:not(:last-child) {
   text-decoration: none;
 }
 
+.navbar {
+  background-color: transparent;
+  padding: 10px;
+}
+
+.navbar button {
+  margin-right: 10px;
+  font-size: 14px;
+  color: #333;
+  background-color: transparent;
+  border: none;
+  border-radius: 4px;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.navbar button:hover {
+  background-color: #ddd;
+}
+
 
 
 
